[metadata]
name = homeasssistant-mqtt-binding
version = 1.0.0
author = Andreas Philipp
author_email = andreas.philipp@anphi.de
description = Bindings to implement arbitrary homeassistant devices in python using mqtt as interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/anphi/homeassistant-mqtt-binding
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Home Automation

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paho-mqtt~=1.5.1

[options.packages.find]
where = src
